# grammar-synthesis

./: README.md  demo.py  policy.py  pyproject.toml  random_generator.py  requirements.txt  setup.py  uniform_random_generator.py
grammar_synthesis/: __init__.py
grammar_synthesis/envs/: __init.py  synthesis_env.py
grammar_synthesis/envs/assets/: example.lark  example.pg  json.pg  karel-dsl.lark  microrts-dsl.lark  turtle-dsl.lark
grammar_synthesis/policy/: __init__.py  parsed_playback.py  random_sampler.py  uniform_random_sampler.py
src/grammar_synthesis/: __init__.py  examples.py
src/grammar_synthesis/envs/: __init__.py  examples.py  synthesis_env.py
src/grammar_synthesis/policy/: __init__.py  parsed_playback.py  random_sampler.py  uniform_len_sampler.py  uniform_random_sampler.py
tests/: test_demo.py
